--- a/templates/npm-steps.yml
+++ b/templates/npm-steps.yml
@@ -1,4 +1,4 @@
 # File: templates/npm-steps.yml
 steps:
-- script: npm install
-- script: npm test
+- script: echo 'npm install'
+- script: echo 'npm test'
