--- a/templates/jobs.yml
+++ b/templates/jobs.yml
@@ -4,7 +4,7 @@ jobs:
   pool:
     vmImage: 'ubuntu-latest'
   steps:
-  - template: ./npm-steps.yml  # Template reference
+  - template: npm-steps.yml  # Template reference
 
 - job: Windows
   pool:
