Stage reuse added

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,9 +20,26 @@ trigger:
 
 # File: azure-pipelines.yml
 
-jobs:
+# jobs:
 # - template: templates/jobs.yml  # Template reference
-- template: templates/npm-with-params.yml  # Template reference
-  parameters:
-    name: Linux
-    vmImage: 'ubuntu-latest'
+# - template: templates/npm-with-params.yml  # Template reference
+#   parameters:
+#     name: Linux
+#     vmImage: 'ubuntu-latest'
+# ---------------------------------------------
+
+# File: azure-pipelines.yml
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+stages:
+- stage: Install
+  jobs: 
+  - job: npminstall
+    steps:
+    - task: Npm@1
+      inputs:
+        command: 'install'
+- template: templates/stages1.yml # Template reference
+- template: templates/stages2.yml # Template reference
