--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,8 @@ resources:
   repositories:
     - repository: notification
       type: github
-      name: core-templates
+      name: maazpatel24/core-templates
+      endpoint: https://github.com/maazpatel24/core-templates.git
 
 jobs:
   - template: notification/senders.yml@notification
