--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ resources:
     - repository: notification
       type: github
       name: core-templates
-      endpoint: maazGitConnect
+      endpoint: maazpatel24-connection
 
 jobs:
   - template: notification/senders.yml@notification
