--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ resources:
   repositories:
     - repository: notification
       type: github
-      name: core-templates
+      name: maazpatel24/core-templates
       endpoint: maazpatel24-connection
 
 jobs:
