--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 resources: 
+  webhooks:
+    - webhook: MyWebHook
+      connection: WebHook-connection
+
   repositories:
     - repository: notification
       type: github
