--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,14 +15,8 @@ resources:
       endpoint: maazpatel24-connection
       ref: refs/heads/main
 
-      
-trigger: 
-  branches:
-    include:
-      - none
-  # paths:
-  #   exclude:
-  #     - '*'
+trigger: none
+
 
 pool:
   vmImage: ubuntu-latest
@@ -30,7 +24,7 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  condition: eq(variables['Build.SourceBranch'], 'refs/heads/main')
+  condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/main'))
   jobs:
   - template: notifications/senders.yml@notification
     parameters:
