--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  condition: and(succeeded(), ne(variables['Build.SourceBranch'], 'refs/heads/main'))
+  condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
   - template: notifications/senders.yml@notification
     parameters:
