--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,15 +24,20 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
+  # condition: ne(jsonpath(trigger().payload, '$.ref'), 'refs/heads/main')
+
+  # condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
-  - template: notifications/senders.yml@notification
-    parameters:
-      message: "Hello world Maaz"
-      senders:
-      - Slack
-      - MSTeams
-      - OutLook
+  - job: 
+    steps:  
+      - script: echo ${{ parameters.MyWebHook.payload.ref }}
+  # - template: notifications/senders.yml@notification
+  #   parameters:
+  #     message: "Hello world Maaz"
+  #     senders:
+  #     - Slack
+  #     - MSTeams
+  #     - OutLook
 
 
 # jobs:
