Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,8 @@ resources:
 
 trigger: none
 
+variables:
+  -branchRef: parameters.MyWebHook.ref
 
 pool:
   vmImage: ubuntu-latest
@@ -24,8 +26,8 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  # condition: ne(jsonpath(trigger().payload, '$.ref'), 'refs/heads/main')
-
+  condition: ne( '$(branchRef)', 'refs/heads/main')
+  
   # condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
   - job: 
