--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,15 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  condition: eq( '$(branchRef)', 'refs/heads/main')
+  # condition: eq( '$(branchRef)', 'refs/heads/main')
   
   # condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
   - job: 
     steps:  
-      - script: echo ${{ parameters.MyWebHook.ref }}
+      - script: |
+          echo ${{ parameters.MyWebHook.ref }}
+          echo $(branchRef)
   # - template: notifications/senders.yml@notification
   #   parameters:
   #     message: "Hello world Maaz"
