--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  condition: eq( '$(branchRef)', 'refs/heads/main')
+  # condition: eq( '$(branchRef)', 'refs/heads/main')
   
   # condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
