Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
           # echo ${{ parameters.MyWebHook.ref }}
           echo $(branchRef)
           echo $(repoName)
-          $(Build.Repository.Name)
+          echo $(Build.Repository.Name)
   # - template: notifications/senders.yml@notification
   #   parameters:
   #     message: "Hello world Maaz"
