--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,7 +27,9 @@ pool:
 stages:
 - stage: Build
   displayName: Stage 1
-  # condition: eq( '$(branchRef)', 'refs/heads/main')
+  condition: eq( '$(repoName', '$(Build.Repository.Name)')
+
+  # condition: and(succeeded(), eq( '$(branchRef)', 'refs/heads/main'), eq( '$(repoName', '$(Build.Repository.Name)'))
   
   # condition: ne(variables['Build.SourceBranch'], 'refs/heads/main')
   jobs:
