--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,19 +6,19 @@
 resources: 
   webhooks:
     - webhook: MyWebHook
-      connection: WebHook-connection
+      connection: WebHook-connection  # Service connection name
 
   repositories:
     - repository: notification
       type: github
       name: maazpatel24/core-templates
-      endpoint: maazpatel24-connection
+      endpoint: maazpatel24-connection  # Service connection name
       ref: refs/heads/main
 
 trigger: none
 
 variables:
-  branchRef: '${{ parameters.MyWebHook.ref }}'
+  branchRef: '${{ parameters.MyWebHook.ref }}'  # Getting Brach ref from incomming .json payload
   repoName: '${{ parameters.MyWebHook.repository.full_name }}'
 
 pool:
