azure-pipelines.yml commit pull request

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ resources:
       type: github
       name: maazpatel24/core-templates
       endpoint: maazpatel24-connection
-      ref: main
+      ref: ref/heads/main
 
 jobs:
   - template: notifications/senders.yml@notification
